fix toggle and alignments

--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
-@import url('/font/Oswald-Light.ttf?family=Oswald');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 
 .Homepage {
   width: 80%;
@@ -30,6 +30,7 @@ h2 {
   font-family: 'Oswald', sans-serif;
   text-align: left;
   width: 100%;
+  font-size: 1.8rem;
 }
 p {
   color: #666;
@@ -37,21 +38,76 @@ p {
   text-align: justify;
   margin: 0.5em 0 0.5em 0;
 }
+p:first-letter {
+  text-transform: capitalize;
+}
+
 .toggle {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
   color: #4a756c;
-  text-align: center;
+  font-weight: bold;
 }
+
+.toggle p {
+  margin: 0;
+}
+
+/* switch */
+#switch {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  width: 60px;
+  height: 30px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+  left: -11px;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+#switch:checked + label {
+  background: #4a756c;
+}
+
+#switch:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+/* ----- */
+
 .couvpdf {
   width: 100%;
+  margin: 0.5em 0 1em 0;
 }
 .couvpdf img {
   width: 45%;
   margin: 1%;
+}
+.couvpdf img:nth-child(3) {
+  width: 92%;
 }
 
 .imagePhare,
@@ -72,7 +128,7 @@ p {
 .ressource a {
   display: inline-block;
   width: 100%;
-  padding: 0.4em 0 0.4em 0;
+  padding: 0.5em 0 0.4em 0;
   margin-bottom: 0.8em;
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
@@ -90,50 +146,6 @@ p {
   color: #eafaf6;
 }
 
-/* switch */
-input[type='checkbox'] {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
-
-label {
-  cursor: pointer;
-  width: 100px;
-  height: 40px;
-  background: grey;
-  display: block;
-  border-radius: 100px;
-  position: relative;
-}
-
-label:after {
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 30px;
-  height: 30px;
-  background: #fff;
-  border-radius: 90px;
-  transition: 0.3s;
-}
-
-input:checked + label {
-  background: #4a756c;
-}
-
-input:checked + label:after {
-  left: calc(100% - 5px);
-  transform: translateX(-100%);
-}
-
-label:active:after {
-  width: 60px;
-}
-
-/* ----- */
-
 @media (max-width: 1000px) {
   .Homepage {
     width: 95%;
@@ -144,6 +156,9 @@ label:active:after {
     padding: 0;
   }
   .couvpdf img {
+    width: 30%;
+  }
+  .couvpdf img:nth-child(3) {
     width: 30%;
   }
 }
